# EECS-690-data-science

./: .gitignore  README.md
mp1/: .gitignore  README.md  instructions.html  mp1.ipynb  pyproject.toml
mp2a/: README.md  duong.ipynb  instructions.html  pyproject.toml
mp2b/: README.md  instructions.html  pyproject.toml
