[project]
name = "mp2a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "ibis>=3.3.0",
    "ibis-framework[sqlite]>=10.0.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "jupyter>=1.1.1",
]
